<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>com.alien-force</groupId>
  <artifactId>alien-force</artifactId>
  <version>1.0.0</version>

  <name>Alean Force</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <lombok.version>1.18.46</lombok.version>
    <jackson.version>2.17.1</jackson.version>
  </properties>

  <dependencies>
    <!-- Source: https://mvnrepository.com/artifact/org.projectlombok/lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>compile</scope>
    </dependency>

    <!-- Source: https://mvnrepository.com/artifact/net.java.jinput/jinput -->
    <dependency>
      <groupId>net.java.jinput</groupId>
      <artifactId>jinput</artifactId>
      <version>2.0.10</version>
<!--      <scope>compile</scope>-->
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${jackson.version}</version>
    </dependency>
  </dependencies>

  <build>
    <defaultGoal>clean package</defaultGoal>

    <resources>
      <resource>
        <directory>src/resource/com/alienforce/assets</directory>
        <targetPath>com/alienforce/assets</targetPath>
      </resource>
    </resources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <source>26</source>
          <target>26</target>

          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>

          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <finalName>alien-force</finalName>
              <transformers>
                <transformer
                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.alienforce.Main</mainClass>
                </transformer>
              </transformers>
              <artifactSet>
                <excludes>
                  <!-- Excludes the core Lombok library and its variants -->
                  <exclude>org.projectlombok:lombok</exclude>
                  <exclude>org.projectlombok:lombok-mapstruct-binding</exclude>
                </excludes>
              </artifactSet>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!--            <plugin>-->
      <!--                <groupId>org.apache.maven.plugins</groupId>-->
      <!--                <artifactId>maven-copy-plugin</artifactId>-->
      <!--                <version>4.0.0</version>-->
      <!--                <executions>-->
      <!--                    <execution>-->
      <!--                        <id>deploy-to-local-directory</id>-->
      <!--                        <phase>install</phase>-->
      <!--                        <goals>-->
      <!--                            <goal>copy</goal>-->
      <!--                        </goals>-->
      <!--                        <configuration>-->
      <!--                            <skipIdentical>false</skipIdentical>-->
      <!--                            <failIfNotFound>false</failIfNotFound>-->
      <!--                            <resources>-->
      <!--                                <resource>-->
      <!--                                    <description>Copy artifact to another directory</description>-->
      <!--                                    <targetPath>/your/local/path</targetPath>-->
      <!--                                    <directory>${project.build.directory}</directory>-->
      <!--                                    <includes>-->
      <!--                                        <include>*.jar</include>-->
      <!--                                    </includes>-->
      <!--                                </resource>-->
      <!--                            </resources>-->
      <!--                        </configuration>-->
      <!--                    </execution>-->
      <!--                </executions>-->
      <!--            </plugin>-->
    </plugins>
  </build>

</project>
